# invoicer

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
backend/app/enums/: invoice_enums.py  oauth_enums.py
backend/app/exceptions/: api_exceptions.py
backend/app/helpers/: translations.py
backend/app/helpers/http_clients/: ares_http_client.py  base_http_client.py  google_http_client.py
backend/app/models/: __init__.py  customers.py  invoice_item.py  invoice_items.py  invoices.py  oauth.py  suppliers.py  users.py
backend/app/repositories/: auth.py  base_repository.py  invoice_customers.py  invoice_items.py  invoice_suppliers.py  invoices.py  oauth.py  users.py
backend/app/routers/: ares.py  auth.py  invoice_customers.py  invoice_items.py  invoice_suppliers.py  invoices.py
backend/app/schemas/: ares_economic_subjects.py  auth.py  customers.py  invoice_items.py  invoices.py  suppliers.py  tokens.py  users.py
backend/app/services/: managers.py  mappers.py  pdf_service.py  qr_code_service.py
backend/app/services/api/: auth.py  base_api_service.py  invoice_customers.py  invoice_items.py  invoice_suppliers.py  invoices.py
backend/app/services/api/auth/: __init__.py  auth.py  google_auth.py
backend/app/services/ares/: ares_schema.py  ares_service.py
backend/app/templates/: filters.py  invoice.css  invoice.css.map  invoice.html  invoice.scss
backend/commands/: create_user.py
backend/core/: config.py  db.py  db_utils.py  jinja2_env.py  security.py
backend/migrations/: env.py  migrations_helper.py
backend/migrations/versions/: 0001_invoicer_init.py  0001_invoicer_models_init.py  0002_add_bank_code_iban.py  0003_user_update_first_revision.py  0004_add_dic_customer.py  0005_add_unit_inv_item.py  0006_mapped_in_basemodel.py  0007_oauth_accounts.py  0008_automatic_datetime.py  0009_add_order_number_to_invoice.py  init_0001_invoicer_init.py
backend/src/invoices/: models.py
backend/src/invoices/models/: __init__.py  customers.py  invoices.py
backend/src/users/: managers.py  models.py
backend/tests/: test_main.py
frontend/: .env.example  .gitignore  eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/components/: AresResponseDisplay.tsx  MainMenu.tsx  ProtectedRoute.tsx  loginForm.tsx
frontend/src/components/buttons/: GoogleButton.tsx
frontend/src/components/dialogs/: CustomerDialog.tsx  InvoiceDialog.tsx  SupplierDialog.tsx
frontend/src/components/forms/: AresVatIdForm.tsx  CustomerForm.tsx  InvoiceForm.tsx  InvoiceItemForm.tsx  SupplierForm.tsx
frontend/src/components/forms_inputs/: inputField.tsx
frontend/src/components/tables/: CustomerTable.tsx  InvoicesTable.tsx  SupplierTable.tsx  dataTable.tsx
frontend/src/components/ui/: dialog.tsx  dropdown-menu.tsx  menubar.tsx  sheet.tsx  sidebar.tsx  toggle.tsx  tooltip.tsx
frontend/src/contexts/: LayoutContext.tsx
frontend/src/lib/: helpers.ts  httpClient.ts
frontend/src/lib/mappers/: customerMappers.ts
frontend/src/lib/services/: aresApiService.ts  authService.ts  customersApiService.ts  invoicesApiService.ts  suppliersApiService.ts  (+1 more)
frontend/src/pages/: CustomerDetailPage.tsx  CustomersPage.tsx  HomePage.tsx  InvoiceDetailPage.tsx  InvoicesPage.tsx  SupplierDetailPage.tsx  SuppliersPage.tsx
frontend/src/stores/: useCustomerStore.ts  useInvoiceStore.ts  useSupplierStore.ts
frontend/src/styles/: globals.css
frontend/src/types/: aresCompany.ts  customer.ts  invoice.ts  supplier.ts
(+13 files in other folders)
