[tool.poetry]
name = "invoicer"
version = "0.1.0"
description = ""
authors = ["Lukáš Klíma <info@lukasklima.cz>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
ruff = "^0.4.5"
mypy = "^1.10.0"
black = "^24.4.2"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
